--- a/argocdingress.yaml
+++ b/argocdingress.yaml
@@ -69,32 +69,34 @@
 #             port:
 #               number: 80
 
-#kind: Ingress
-#metadata:
-#name: argocd-server-ingress
-#  namespace: argocd
-#  annotations:
-#    cert-manager.io/cluster-issuer: letsencrypt-prod
-#    kubernetes.io/ingress.class: nginx
-#    kubernetes.io/tls-acme: "true"
-#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-server-ingress
+  namespace: argocdd
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     # If you encounter a redirect loop or are getting a 307 response code
     # then you need to force the nginx ingress to connect to the backend using HTTPS.
     #
-#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-#spec:
- # rules:
- # - host: argocd.josephaggrey.com
- #   http:
- #     paths:
- #     - path: /
- #       pathType: Prefix
- #       backend:
- #         service:
- #           name: argocd-server
- #           port:
- #             name: https
- # tls:
- # - hosts:
-#  - argocd.josephaggrey.com
-#    secretName: argocd-secret # do not change, this is provided by Argo CD
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+spec:
+  rules:
+  - host: argocd.josephaggrey.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: argocd-server
+            port:
+              name: https
+  tls:
+  - hosts:
+    - argocd.josephaggrey.com
+    secretName: argocd-secret # do not change, this is provided by Argo CD
+
