--- a/enohingress.yaml
+++ b/enohingress.yaml
@@ -1,5 +1,25 @@
 
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  namespace: test
+  name: joetechingress
+  labels:
+    name: joetechingress
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: josephaggrey.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: bushsvc
+            port:
+              number: 80
 
 
 
-/.
+
