--- a/bushsvc.yaml
+++ b/bushsvc.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   selector:
     app: bushapp
-  type: NodePort
+  #type: NodePort
   ports:
   - name: http
     port: 80
     targetPort: 8080
-    nodePort: 31000
+    #nodePort: 31000
